# grid_clicker

./: README.md  package.json  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mouse.rs  window.rs
src/lib/: appstore.ts  utils.ts
src/lib/components/controller/: controller.svelte
src/routes/: +layout.svelte  +page.svelte  canvasDrawing.ts
